# tax-office

./: 000000000.txt  CMakeLists.txt  Home.cpp  Home.h  Main.cpp  MyExc.cpp  MyExc.h  Plot.cpp  Plot.h  Shop.cpp  Shop.h  Statement.cpp  Statement.h  Thing.cpp  Thing.h  all.txt  vagos.txt
